--- a/css/estilo.css
+++ b/css/estilo.css
@@ -38,3 +38,19 @@
   #titulo{
     text-align: center;
   }
+
+  .tomate {
+  position: fixed;
+  top: -50px;
+  width: 50px;
+  height: 50px;
+  animation: cair 2s ease-in forwards;
+  z-index: 999;
+}
+
+@keyframes cair {
+  to {
+    top: 100vh;
+    opacity: 0;
+  }
+}
